fix: push player off screen with translate

--- a/src/SpotifyPlayer.module.css
+++ b/src/SpotifyPlayer.module.css
@@ -1,5 +1,4 @@
 .player {
     position: absolute;
-    left: -99999px;
-    top: -99999px;
+    transform: translateX(-99999px) translateY(-99999px);
 }
